# vsup

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/quantization/: index.html
api/transforms/: index.html
api/vsup/: index.html
autoapi/summary/: index.html
autoapi/vsup/: index.html
autoapi/vsup/quantization/: index.html
autoapi/vsup/transforms/: index.html
autoapi/vsup/vsup/: index.html
docs/: index.md
docs/api/: quantization.md  transforms.md  vsup.md
examples/: basic_usage.ipynb
search/: search_index.json
tests/: test_vsup.py
vsup/: __init__.py  quantization.py  transforms.py  vsup.py
