[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsup"
version = "0.1.0"
authors = [
    { name = "John Goertz", email = "johngoertz@gmail.com" }
]
description = "Value-Suppressing Uncertainty Palettes for Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-image",
]

[project.urls]
"Homepage" = "https://github.com/JohnGoertz/vsup"
"Bug Tracker" = "https://github.com/JohnGoertz/vsup/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vsup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=vsup"

[tool.coverage.run]
source = ["vsup"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-marimo>=0.2.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
